--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build:
     stage: build
     before_script:
         - pacman -Sy --noconfirm 
-        - pacman -S python --noconfirm 
+        - pacman -S python python-pip --noconfirm 
         - pip install Pillow
         - pip install numpy
         - pip install pycrypto
