Adding encrypted-testing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
     script:
         - python2 -m py_compile image-steganography.py 
 
-integration-testing:
+non-encrypted-testing:
     stage: integration-testing 
     before_script:
         - pacman -Sy --noconfirm 
@@ -23,4 +23,18 @@ integration-testing:
         - ./image-steganography.py --encode --input input.image.png --data input.data --output output.image.png
         - ./image-steganography.py --decode --input output.image.png  --output output.data
         - cmp --silent input.data output.data
+
+
+encrypted-testing:
+    stage: integration-testing 
+    before_script:
+        - pacman -Sy --noconfirm 
+        - pacman -S python2 python2-pillow python2-numpy python2-pycryptodome diffutils --noconfirm 
+    script:
+        - curl https://png.pngtree.com/element_our/sm/20180327/sm_5aba147bcacf2.png > input.image.png
+        - echo "12345" > input.data
+        - ./image-steganography.py --encode --input input.image.png --data input.data --output output.image.png --key 1234567890123456
+        - ./image-steganography.py --decode --input output.image.png  --output output.data --key 1234567890123456
+        - cmp --silent input.data output.data
+
 
