ci: using latest Earthly image
Using the latest Earthly Docker image now that they have fixed what latest points to.

https://github.com/earthly/earthly/issues/2142

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
   EARTHLY_EXEC_CMD: "/bin/sh"
 
 
-image: earthly/earthly:v0.6.22
+image: earthly/earthly
 
 
 clean-git-history-checking:
